--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,11 @@ h1 {
   display: inline-block;
 }
 
+.purple {
+  background-color: #8c03fc;
+  color: white;
+}
+
 input {
   width: 100%;
   padding: 5px;
@@ -37,6 +42,11 @@ input {
   margin-bottom: 10px;
 }
 
+.current-result {
+  border: 1px solid #8c03fc;
+  border-radius: 10px;
+}
+
 .buttons {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
@@ -48,14 +58,14 @@ input {
 }
 
 button {
-  background-color: #f0f0f0;
+  background-color: #fff;
   border: 1px solid #ccc;
   font-size: 18px;
   padding: 10px;
   cursor: pointer;
   width: 100%;
-}
-
-button:hover {
-  background-color: #ddd;
+  border-radius: 10px;
+  box-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);
+  color: #8c03fc;
+  text-align: center;
 }
